<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/main_button_toggle_flashlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/main_button_toggle_flashlight" />

        <Button
            android:id="@+id/main_button_toggle_strobe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/main_button_toggle_strobe" />

        <Button
            android:id="@+id/main_button_toggle_sos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/main_button_toggle_sos" />

        <TextView
            android:id="@+id/textView"
            android:labelFor="@id/main_seek_flashing_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flashing_speed" />

        <SeekBar
            android:id="@+id/main_seek_flashing_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/main_button_flash_morse_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/main_btn_flash_morse_message"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>